--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
   --white:#FFF;
 }
 html {
-  font-family: sans-serif;
+  font-family: 'Lato',sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font-size: 62.5%;
@@ -7899,7 +7899,7 @@ figure {
   font-size: 24px;
 }
 #fh5co-hero .btn.btn-primary {
-  padding: 14px 30px !important;
+  padding: 5px 30px !important;
 }
 #fh5co-hero .flexslider {
   border: none;
@@ -8894,7 +8894,8 @@ input[type="text"] {
   }
 }
 .section-title h2 {
-  font-size: 20px;
+  font-family: 'Lato',sans-serif;
+  font-size: 3.0rem;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: 300;
