--- a/css/style.css
+++ b/css/style.css
@@ -8054,7 +8054,7 @@ div.cs-select span {
   border-radius: 10px;
   position: absolute;
   left: calc(50% - 200px);
-  top: calc(100% - 410px);
+  top: calc(100% - 280px);
   display: block;
   margin-top: 0;
   margin-bottom: 0;
@@ -8064,8 +8064,15 @@ div.cs-select span {
   -o-box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.2);
 }
+.myc{
+  margin-top: 50px;
+}
 @media screen and (max-width: 1176px) {
   #availability {
+    top: calc(100% - 350px);
+  }
+  .myc{
+    margin-top: 30px;
   }
 }
 
@@ -8073,7 +8080,10 @@ div.cs-select span {
   #availability {
     max-width: 450px;
     left: calc(50% - 225px);
-    top: calc(100% - 550px);
+    top: calc(100% - 450px);
+  }
+  .myc{
+    margin-top: 20px;
   }
 }
 @media screen and (max-width: 915px) {
@@ -8082,15 +8092,20 @@ div.cs-select span {
     left: calc(50% - 175px);
   }
 }
+/*
 @media screen and (max-width: 915px) {
   #availability {
     width: 100%;
   }
 }
+*/
 @media screen and (max-width: 769px) {
   #availability {
     width: 100%;
-    top: calc(100% - 550px);
+    top: calc(100% - 450px);
+  }
+  .myc{
+    margin-top: 10px;
   }
 }
 #availability > form {
@@ -8252,9 +8267,6 @@ div.cs-select span {
   letter-spacing: 2px;
   margin-bottom: 2em;
   display: block;
-}
-.myc{
-  margin-top: 70px;
 }
 #featured-hotel {
   float: left;
