--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 :root{
   /*Colores*/
   --color-primario:#00a8ab;
+  --color-rgba-prim:rgba(0,168,171,0.5);
   --color-primario-c:#3c797d;
   --bg-hover:#005455;
   --color-secundario:#5c9598;
