--- a/css/t-style.css
+++ b/css/t-style.css
@@ -1,13 +1,19 @@
-/* 
-
-Journey Template 
-http://www.templatemo.com/tm-511-journey
-
-Primary color (light blue)  : #69c6ba
-Highlight color (pink)		: #c66995
+/*
+Primary color (light blue)  : var(--color-primario)
+Highlight color (pink)		: var(--color-secundario)
 --------------------------------------
-
-*/
+*//*
+:root{
+    --color-primario:#00a8ab;
+    --color-rgba-prim:rgba(0,168,171,0.5);
+    --color-primario-c:#3c797d;
+    --bg-hover:#005455;
+    --color-secundario:#5c9598;
+    --grey-sv:#ada5a5;
+    --grey:#555;
+    --bl-color:#000;
+    --white:#FFF;
+}*/
 .tm-page-wrap { 
     max-width: 1400px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
@@ -23,21 +29,21 @@ Highlight color (pink)		: #c66995
 .tm-text-gray { color: #787676; }
 
 .tm-text-highlight {
-    color: #c66995;
+    color: var(--color-secundario);
     font-weight: 600;
 }
 
-.tm-bg-primary { background: #69c6ba; }
-.tm-bg-highlight { background: #c66995; }
+.tm-bg-primary { background: var(--color-primario); }
+.tm-bg-highlight { background: var(--color-secundario); }
 
 .btn-primary {
-    background: #69c6ba;
+    background: var(--color-primario);
     border: none;
     border-radius: 0;
     outline: none;
 }
 
-.btn-primary:hover { background: #c66995; }
+.btn-primary:hover { background: var(--color-secundario); }
 .tm-top-bar .navbar-expand-lg .navbar-nav .nav-link { padding: 50px 35px; }
 
 .tm-top-bar {
@@ -104,7 +110,7 @@ Highlight color (pink)		: #c66995
 .tm-banner-row-header { text-align: center; }
 .tm-down-arrow-link { 
     color: white;
-    background-color: #69c6ba;
+    background-color: var(--color-primario);
     border-radius: 50%;
     padding: 10px 15px;
     margin-top: 0px;
@@ -114,7 +120,7 @@ Highlight color (pink)		: #c66995
 .tm-down-arrow-link:hover,
 .tm-down-arrow-link:focus {
     color: white;
-    background-color: #c66995;
+    background-color: var(--color-secundario);
 }
 
 /* Search form */
@@ -149,20 +155,20 @@ label { font-weight: 700; }
 }
 
 .tm-btn-white { background: white; }
-.tm-btn-white-primary { color: #69c6ba; }
-.tm-btn-white-highlight { color: #c66995; }
+.tm-btn-white-primary { color: var(--color-primario); }
+.tm-btn-white-highlight { color: var(--color-secundario); }
 
 .tm-btn-white-primary:hover,
 .tm-btn-white-primary:focus,
 .tm-btn-white-primary:active {
-    background: #c66995;
+    background: var(--color-secundario);
     color: white;
 }
 
 .tm-btn-white-highlight:hover,
 .tm-btn-white-highlight:focus,
 .tm-btn-white-highlight:active {
-    background: #69c6ba;
+    background: var(--color-primario);
     color: white;
 }
 
@@ -171,7 +177,7 @@ label { font-weight: 700; }
 .tm-btn-search:hover,
 .tm-btn-search:active,
 .tm-btn-search:focus {
-    background: #c66995;
+    background: var(--color-secundario);
 }
 
 .tm-bg-gray { background-color: #efefef; }
@@ -235,12 +241,12 @@ label { font-weight: 700; }
 
 .slick-prev:hover,
 .slick-next:hover {
-    background: #69c6ba;
+    background: var(--color-primario);
 }
 
 .tm-slideshow-highlight .slick-prev:hover, 
 .tm-slideshow-highlight .slick-next:hover {
-    background: #c66995;
+    background: var(--color-secundario);
 }
 
 .slick-prev {
@@ -275,7 +281,7 @@ label { font-weight: 700; }
     -webkit-justify-content: space-evenly;
     -ms-flex-pack: space-evenly;
     justify-content: space-evenly;
-    background: #69c6ba;
+    background: var(--color-primario);
 }
 
 .tm-tab-link {
@@ -318,7 +324,7 @@ label { font-weight: 700; }
 
 .tm-tab-link:hover,
 .tm-tab-link.active {
-    background: #c66995;
+    background: var(--color-secundario);
 }
 
 .tab-pane {
@@ -351,7 +357,7 @@ label { font-weight: 700; }
 }
 
 .tm-recommended-price-box {    
-    background-color: #69c6ba;
+    background-color: var(--color-primario);
     background-image: url(../img/button-curve.png);
     background-repeat: no-repeat;
     background-size: auto 100%;
@@ -378,7 +384,7 @@ label { font-weight: 700; }
     transition: all 0.3s ease;
 }
 
-.tm-recommended-price-box:hover { background-color: #c66995; }
+.tm-recommended-price-box:hover { background-color: var(--color-secundario); }
 
 .tm-recommended-price {
     color: white;
@@ -396,7 +402,7 @@ label { font-weight: 700; }
 .tm-d-table { display: table; }
 
 footer {
-    background: #69c6ba;
+    background: var(--color-primario);
     padding-top: 40px;
     padding-bottom: 40px;
     text-align: center;    
@@ -414,7 +420,7 @@ footer p { color: white; }
     font-weight: 600;
 }
 
-.tm-footer-text-highlight:hover { color: #c66995; }
+.tm-footer-text-highlight:hover { color: var(--color-secundario); }
 
 .tm-contact-form {
     background: white;
@@ -432,8 +438,8 @@ footer p { color: white; }
 }
 
 .form-control:focus {
-    border-color: #69c6ba;
-    box-shadow: 0 0 0 0.1rem #69c6babf;
+    border-color: var(--color-primario);
+    box-shadow: 0 0 0 0.1rem var(--color-primario)bf;
 }
 
 .tm-name-container,
