--- a/css/t-style.css
+++ b/css/t-style.css
@@ -197,6 +197,7 @@ label { font-weight: 700; }
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+    margin: 20px 0;
 }
 
 .tm-slideshow-section-reverse {
