Prop CDMX_Paralax

--- a/css/tt-main.css
+++ b/css/tt-main.css
@@ -142,7 +142,7 @@
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 15vh;
-  background-image: url(../images/image-2.jpg);
+  background-image: url(../assets/pexels/angel_i.jpg);
   background-attachment: fixed;
   min-height: 100vh;
   background-size: cover;
