Bellas artes added

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
   /*Colores*/
   --color-primario:#00a8ab;
   --color-rgba-prim:rgba(0,168,171,0.5);
+  --color-rgba-pb:rgba(0,168,171,0.8);
   --color-primario-c:#3c797d;
   --bg-hover:#005455;
   --color-secundario:#5c9598;
