--- a/css/tt-main.css
+++ b/css/tt-main.css
@@ -32,6 +32,17 @@
   background: linear-gradient( rgb(4,122,122,0.6) 100%, rgba(0, 0, 0, 0.5)100%);
   background-size: contain;
 }
+.mmOverlayBlack {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  min-height: 100vh;
+  height: 100%;
+  /*background: rgb(4,122,122,0.6);*/
+  background: rgba(0, 0, 0, 0.5);
+  background-size: contain;
+}
 .titlePlace{
   text-transform: none!important;
   font-size: 8rem;
@@ -65,8 +76,8 @@
   color: black;
 }
 .fixed-side-navbar .nav > li a.active:after {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
+  transform: scale(0.9);
+  /*-webkit-transform: scale(0.9);*/
 }
 .fixed-side-navbar .nav > li a.active:before {
   content: '';
@@ -77,7 +88,7 @@
   width: 16px;
   height: 16px;
   background: transparent;
-  border: 2px solid #fff;
+  border: 2px solid var(--color-primario);
   border-radius: 10px;
 }
 .nav>li {
@@ -108,15 +119,16 @@
   background: rgba(250, 250, 250, 0.75);
   -webkit-transition: all .3s;
   transition: all .3s;
-  -webkit-transform: scale(0.6);
-          transform: scale(0.6);
+  /*-webkit-transform: scale(0.6);*/
+  transform: scale(0.6);
 }
 .fixed-side-navbar .nav > li a:hover {
   background-color: transparent;
+  /*background-color: var(--color-primario);*/
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   border-color: black;
-  boder-right: 0;
+  border-right: 0;
 }
 .fixed-side-navbar .nav > li a:hover > span {
   color: black;
@@ -165,6 +177,30 @@
   vertical-align: super;
 }
 .element-content__bellasartes ul li{
+  list-style: none;
+}
+.element-content__palaciopostal{
+  position: relative;
+  padding-top: 30vh;
+  text-align: center;
+  background-image: url(../assets/pexels/postal.jpeg);
+  background-attachment: fixed;
+  min-height: 100vh;
+  background-size: contain;
+  background-position: top center;
+}
+.element-content__palaciopostal h1 {
+  margin-top: 0;
+  font-size: 5.8rem;
+  color: #fff;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+.element-content__palaciopostal h1 span{
+  vertical-align: super;
+}
+.element-content__palaciopostal ul li{
   list-style: none;
 }
 .baner-content {
