--- a/css/tt-main.css
+++ b/css/tt-main.css
@@ -155,6 +155,7 @@
   min-height: 100vh;
   background-size: cover;
 }
+/**Bellas artes Styles**/
 .element-content__bellasartes{
   position: relative;
   padding-top: 30vh;
@@ -179,6 +180,7 @@
 .element-content__bellasartes ul li{
   list-style: none;
 }
+/**Palacio Postal Styles**/
 .element-content__palaciopostal{
   position: relative;
   padding-top: 30vh;
@@ -201,6 +203,31 @@
   vertical-align: super;
 }
 .element-content__palaciopostal ul li{
+  list-style: none;
+}
+/**Templo mayor Styles**/
+.element-content__templomayor{
+  position: relative;
+  padding-top: 30vh;
+  text-align: center;
+  background-image: url(../assets/pexels/templo_mayor.webp);
+  background-attachment: fixed;
+  min-height: 100vh;
+  background-size: contain;
+  background-position: top center;
+}
+.element-content__templomayor h1 {
+  margin-top: 0;
+  font-size: 5.8rem;
+  color: #fff;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+.element-content__templomayor h1 span{
+  vertical-align: super;
+}
+.element-content__templomayor ul li{
   list-style: none;
 }
 .baner-content {
@@ -334,6 +361,8 @@ h4, .h4 {
   background-color: var(--color-primario);
   margin: 20px auto 15px auto;
 }
+
+
 .projects-content {
   padding-top: 20vh;
   background-image: url(../assets/pexels/bellas_artes.jpeg);
@@ -366,6 +395,7 @@ h4, .h4 {
   font-weight: 700;
   color: var(--color-primario);
 }
+
 
 .owl-pagination {
   margin-top: 40px;
