--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ body, textarea {
 
 .contact_form h2,
 .contact_form label {
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Open Sans", Arial, serif;
 }
 
 .form_hint,
@@ -281,8 +281,8 @@ body, textarea {
   width: 750px;
   list-style-type: none;
   list-style-position: outside;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 .contact_form li {
@@ -333,7 +333,7 @@ body, textarea {
 .contact_form input,
 .contact_form textarea {
   border: 1px solid #aaa;
-  box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
+  box-shadow: 0 0 3px #ccc, 0 10px 15px #eee inset;
   border-radius: 2px;
 }
 
@@ -345,38 +345,15 @@ body, textarea {
 }
 
 /* Button Style */
-button.submit {
+.submiter{
   background-color: #68b12f;
-  background: -webkit-gradient(linear, left top, left bottom, from(#68b12f), to(#50911e));
-  background: -webkit-linear-gradient(top, #68b12f, #50911e);
-  background: -moz-linear-gradient(top, #68b12f, #50911e);
-  background: -ms-linear-gradient(top, #68b12f, #50911e);
-  background: -o-linear-gradient(top, #68b12f, #50911e);
-  background: linear-gradient(top, #68b12f, #50911e);
-  border: 1px solid #509111;
-  border-bottom: 1px solid #5b992b;
-  border-radius: 3px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  box-shadow: inset 0 1px 0 0 #9fd574;
-  -webkit-box-shadow: 0 1px 0 0 #9fd574 inset;
-  -moz-box-shadow: 0 1px 0 0 #9fd574 inset;
-  -ms-box-shadow: 0 1px 0 0 #9fd574 inset;
-  -o-box-shadow: 0 1px 0 0 #9fd574 inset;
-  color: white;
-  font-weight: bold;
-  padding: 6px 20px;
   text-align: center;
-  text-shadow: 0 -1px 0 #396715;
 }
-
-button.submit:hover {
+.submiter:hover {
   opacity: .85;
   cursor: pointer;
 }
-button.submit:active {
+.submiter:active {
   border: 1px solid #20911e;
   box-shadow: 0 0 10px 5px #356b0b inset;
   -webkit-box-shadow: 0 0 10px 5px #356b0b inset;
