--- a/css/mybtn_flot.css
+++ b/css/mybtn_flot.css
@@ -11,7 +11,8 @@
     bottom: 40px;
     right: 40px;
     transition: all 300ms ease 0ms;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    border-color: var(--bg-hover);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
     z-index: 99;
 }
 .mybtn-flotante:hover {
