--- a/css/mybtn_flot.css
+++ b/css/mybtn_flot.css
@@ -31,3 +31,36 @@
 .text-rsv{
     font-size: 1.1rem;
 }
+.mywap-flotante {
+    font-size: 16px; /* Cambiar el tamaño de la tipografia */
+    text-transform: uppercase; /* Texto en mayusculas */
+    font-weight: bold; /* Fuente en negrita o bold */
+    color: #ffffff; /* Color del texto */
+    border-radius: 5px; /* Borde del boton */
+    letter-spacing: 2px; /* Espacio entre letras */
+    background-color: var(--color-primario); /* Color de fondo */
+    padding: 12px; /* Relleno del boton */
+    position: fixed;
+    bottom: 80px;
+    right: 40px;
+    transition: all 300ms ease 0ms;
+    border-color: var(--bg-hover);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
+    z-index: 99;
+}
+.mywap-flotante:hover {
+    background-color: var(--bg-hover); /* Color de fondo al pasar el cursor */
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-7px);
+}
+@media only screen and (max-width: 600px) {
+    .mywap-flotante {
+        font-size: 14px;
+        padding: 12px 20px;
+        bottom: 20px;
+        right: 20px;
+    }
+}
+.logo-wap{
+    font-size: 1.1rem;
+}
