--- a/css/mybtn_flot.css
+++ b/css/mybtn_flot.css
@@ -19,6 +19,7 @@
     background-color: var(--bg-hover); /* Color de fondo al pasar el cursor */
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
     transform: translateY(-7px);
+    color: #FFF!important;
 }
 @media only screen and (max-width: 600px) {
     .mybtn-flotante {
@@ -32,32 +33,36 @@
     font-size: 1.1rem;
 }
 .mywap-flotante {
-    font-size: 16px; /* Cambiar el tamaño de la tipografia */
+    width: 50px;
+    height: 50px;
+    font-size: 30px; /* Cambiar el tamaño de la tipografia */
     text-transform: uppercase; /* Texto en mayusculas */
     font-weight: bold; /* Fuente en negrita o bold */
     color: #ffffff; /* Color del texto */
-    border-radius: 5px; /* Borde del boton */
-    letter-spacing: 2px; /* Espacio entre letras */
-    background-color: var(--color-primario); /* Color de fondo */
-    padding: 12px; /* Relleno del boton */
+    border-radius: 50%; /* Borde del boton */
+    /*letter-spacing: 2px; /* Espacio entre letras */
+    background-color: #00BB2D; /* Color de fondo */
+    /*padding: 5px; /* Relleno del boton */
+    text-align: center;
     position: fixed;
-    bottom: 80px;
+    bottom: 100px;
     right: 40px;
     transition: all 300ms ease 0ms;
-    border-color: var(--bg-hover);
+    border-color: var(--color-secundario);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
     z-index: 99;
 }
 .mywap-flotante:hover {
-    background-color: var(--bg-hover); /* Color de fondo al pasar el cursor */
+    color: var(--bg-hover); /* Color de fondo al pasar el cursor */
+    background-color: #FFF;
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
     transform: translateY(-7px);
 }
 @media only screen and (max-width: 600px) {
     .mywap-flotante {
-        font-size: 14px;
-        padding: 12px 20px;
-        bottom: 20px;
+        font-size: 30px;
+        /*padding: 12px 20px;*/
+        bottom: 80px;
         right: 20px;
     }
 }
