--- a/css/slider.css
+++ b/css/slider.css
@@ -3,6 +3,7 @@
     margin: auto;
     overflow: hidden;
 }
+/*
 .slider ul {
     display: flex;
     padding: 0;
@@ -29,4 +30,41 @@
 
     75% {margin-left: -300%;}
     100% {margin-left: -300%;}
+}
+*/
+.slider ul {
+    display: flex;
+    padding: 0;
+    width: 700%;
+    animation: cambio 10s infinite alternate linear;
+}
+.slider li {
+    width: 100%;
+    list-style: none;
+}
+.slider img {
+    width: 100%;
+}
+
+@keyframes cambio {
+    0% {margin-left: 0;}
+    12% {margin-left: 0;}
+
+    15% {margin-left: -100%;}
+    27% {margin-left: -100%;}
+
+    30% {margin-left: -200%;}
+    42% {margin-left: -200%;}
+
+    45% {margin-left: -300%;}
+    57% {margin-left: -300%;}
+
+    60% {margin-left: -400%;}
+    72% {margin-left: -400%;}
+
+    75% {margin-left: -500%;}
+    87% {margin-left: -500%;}
+
+    90% {margin-left: -600%;}
+    100% {margin-left: -600%;}
 }
