--- a/css/mybtn_flot.css
+++ b/css/mybtn_flot.css
@@ -22,12 +22,6 @@
     color: #FFF!important;
 }
 @media only screen and (max-width: 600px) {
-    .mybtn-flotante {
-        font-size: 14px;
-        padding: 12px 20px;
-        bottom: 20px;
-        right: 20px;
-    }
 }
 .text-rsv{
     font-size: 1.1rem;
@@ -59,10 +53,51 @@
     transform: translateY(-7px);
 }
 @media only screen and (max-width: 600px) {
+
+}
+.myheart-flotante {
+    width: 50px;
+    height: 50px;
+    font-size: 30px; /* Cambiar el tamaño de la tipografia */
+    text-transform: uppercase; /* Texto en mayusculas */
+    font-weight: bold; /* Fuente en negrita o bold */
+    color: #ffffff; /* Color del texto */
+    border-radius: 50%; /* Borde del boton */
+    /*letter-spacing: 2px; /* Espacio entre letras */
+    background-color: #FF0000; /* Color de fondo */
+    /*padding: 5px; /* Relleno del boton */
+    text-align: center;
+    position: fixed;
+    bottom: 160px;
+    right: 40px;
+    transition: all 300ms ease 0ms;
+    border-color: var(--color-primario);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.7);
+    z-index: 99;
+}
+.myheart-flotante:hover {
+    color: #FF0000!important; /* Color de fondo al pasar el cursor */
+    background-color: #FFF;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-7px);
+}
+@media only screen and (max-width: 600px) {
+    .myheart-flotante {
+        font-size: 30px;
+        /*padding: 12px 20px;*/
+        bottom: 140px;
+        right: 20px;
+    }
     .mywap-flotante {
         font-size: 30px;
         /*padding: 12px 20px;*/
         bottom: 80px;
+        right: 20px;
+    }
+    .mybtn-flotante {
+        font-size: 14px;
+        padding: 12px 20px;
+        bottom: 20px;
         right: 20px;
     }
 }
