--- a/css/mybtn_flot.css
+++ b/css/mybtn_flot.css
@@ -61,7 +61,7 @@
     font-size: 30px; /* Cambiar el tamaño de la tipografia */
     text-transform: uppercase; /* Texto en mayusculas */
     font-weight: bold; /* Fuente en negrita o bold */
-    color: #ffffff; /* Color del texto */
+    color: #ffffff!important; /* Color del texto */
     border-radius: 50%; /* Borde del boton */
     /*letter-spacing: 2px; /* Espacio entre letras */
     background-color: #FF0000; /* Color de fondo */
