--- a/css/carrusel_feb.css
+++ b/css/carrusel_feb.css
@@ -1,10 +1,60 @@
-.carrito {
-    max-width: 800px;
-    margin: 0 auto;
+ :root {
+     --carousel-height: 75rem;
+     --carousel-width: 45rem;
+                     }
+/* Oculta el scroll horizontal */
+.carousel {
+    height: var(--carousel-height);
+    overflow: hidden;
+    width: var(--carousel-width);
+}
+#myVideo {
+    height: var(--carousel-height);
+    width: var(--carousel-width);
+}
+.carousel__container {
+    scroll-snap-type: x mandatory;
     display: flex;
+    overflow-x: auto;
 }
-#imash {
-    width: 100%;
-    height: 400px;
+.carousel__slider {
+    height: var(--carousel-height);
+    min-width: var(--carousel-width);
+    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    scroll-snap-align: start;
 }
+
+
+.carousel__slider--1 {
+    /*background-image: url("https://source.unsplash.com/featured/1000x400/?dog");*/
+}
+.carousel__slider--2 {
+    background-image: url("../images/february/main.jpeg");
+}
+
+.carousel__slider--3 {
+    background-image: url("../images/february/cena_01.jpeg");
+}
+ *::-webkit-scrollbar:vertical {
+     width:5px;
+ }
+
+ *::-webkit-scrollbar-button:increment,.contenedor::-webkit-scrollbar-button {
+     display: none;
+ }
+
+ *::-webkit-scrollbar:horizontal {
+     height: 10px;
+ }
+
+ *::-webkit-scrollbar-thumb {
+     background-color: var(--color-secundario)!important;
+     border-radius: 20px;
+     border: 2px solid rgba(0,0,0,0);
+ }
+
+ *::-webkit-scrollbar-track {
+     border-radius: 10px;
+ }
