--- a/css/slider.css
+++ b/css/slider.css
@@ -78,17 +78,17 @@
 }
 #img-uno{
     margin-left: auto!important;
-    height: 400px!important;
+    height: 600px!important;
     max-width: 500px!important;
 }
 #img-dos{
     height: 450px!important;
-    width: 700px!important;
+    max-width: 700px!important;
 }
 /*.modal-content*/
 .my-mod-c{
     margin: auto;
-    width: 700px;
+    max-width: 700px;
     border:none;
 }
 /*.modal-body*/
