--- a/css/slider.css
+++ b/css/slider.css
@@ -106,3 +106,13 @@
     width: 30px;
     height: 48px;
 }
+
+@media screen and (max-width: 767px) {
+    #modalSep{
+        margin-top: 50px!important;
+    }
+    .my-mod-d{
+        max-width: 600px;
+        margin: 30px auto;
+    }
+}
