--- a/css/mybtn_flot.css
+++ b/css/mybtn_flot.css
@@ -81,6 +81,32 @@
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
     transform: translateY(-7px);
 }
+.myReserv-flotante {
+    width: 50px;
+    height: 50px;
+    font-size: 30px; /* Cambiar el tamaño de la tipografia */
+    text-transform: uppercase; /* Texto en mayusculas */
+    font-weight: bold; /* Fuente en negrita o bold */
+    color: #ffffff!important; /* Color del texto */
+    border-radius: 50%; /* Borde del boton */
+    /*letter-spacing: 2px; /* Espacio entre letras */
+    background-color: var(--color-primario); /* Color de fondo */
+    /*padding: 5px; /* Relleno del boton */
+    text-align: center;
+    position: fixed;
+    bottom: 220px;
+    right: 40px;
+    transition: all 300ms ease 0ms;
+    border-color: var(--color-primario);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.7);
+    z-index: 99;
+}
+.myReserv-flotante:hover {
+    color: var(--color-secundario)!important; /* Color de fondo al pasar el cursor */
+    background-color: #FFF;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-7px);
+}
 @media only screen and (max-width: 600px) {
     .myheart-flotante {
         font-size: 30px;
