--- a/css/style.css
+++ b/css/style.css
@@ -7295,8 +7295,9 @@ button.close {
 }
 
 .carousel-indicators {
+  display: none;
   position: absolute;
-  bottom: 10px;
+  bottom: -10px!important;
   left: 50%;
   z-index: 15;
   width: 60%;
@@ -7311,7 +7312,7 @@ button.close {
   height: 10px;
   margin: 1px;
   text-indent: -999px;
-  border: 1px solid #fff;
+  border: 0 solid rgba(255, 255, 255, 0);
   border-radius: 10px;
   cursor: pointer;
   background-color: #000 \9;
@@ -7321,7 +7322,7 @@ button.close {
   margin: 0;
   width: 12px;
   height: 12px;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 .carousel-caption {
